// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[EditText] interactions !editable renders \`errorText\` 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "black",
            "borderBottomWidth": 2,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderColor": "#C4C4C4",
        },
        Object {
          "borderBottomColor": "#C4C4C4",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Array [
            Object {
              "color": "#6D6D6D",
              "fontSize": 14,
              "paddingHorizontal": 4,
            },
            undefined,
          ],
          false,
          Object {
            "color": "#C4C4C4",
          },
        ]
      }
    >
      label
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={false}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "#C4C4C4",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`[EditText] interactions !editable renders \`labelText\` 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "black",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderColor": "#C4C4C4",
        },
        Object {
          "borderBottomColor": "#C4C4C4",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Array [
            Object {
              "color": "#6D6D6D",
              "fontSize": 14,
              "paddingHorizontal": 4,
            },
            undefined,
          ],
          false,
          Object {
            "color": "#C4C4C4",
          },
        ]
      }
    >
      label
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={false}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "#C4C4C4",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`[EditText] interactions !editable renders without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "black",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderColor": "#C4C4C4",
        },
        Object {
          "borderBottomColor": "#C4C4C4",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={false}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "#C4C4C4",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`[EditText] interactions Type: [boxed] should render \`!editable\` status 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "black",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderColor": "black",
        },
        Object {
          "borderBottomColor": "black",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Array [
            Object {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          Object {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`[EditText] interactions Type: [boxed] should render \`errorText\` 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "black",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderColor": "black",
        },
        Object {
          "borderBottomColor": "black",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Array [
            Object {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          Object {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`[EditText] interactions Type: [boxed] should render \`maxLength\` counter 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "black",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderColor": "black",
        },
        Object {
          "borderBottomColor": "black",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Array [
            Object {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          Object {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`[EditText] interactions Type: [boxed] should render without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "black",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderColor": "black",
        },
        Object {
          "borderBottomColor": "black",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Array [
            Object {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          Object {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`[EditText] interactions Type: [column] - default renders custom styles without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "black",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          Object {},
        ],
        false,
        Object {
          "borderColor": "black",
        },
        Object {
          "borderBottomColor": "black",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            Object {},
          ],
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Array [
            Object {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            Object {},
          ],
          Object {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`[EditText] interactions Type: [column] - default renders without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "black",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderColor": "black",
        },
        Object {
          "borderBottomColor": "black",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Array [
            Object {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          Object {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`[EditText] interactions Type: [column] - default should render \`maxLength\` counter 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "black",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderColor": "black",
        },
        Object {
          "borderBottomColor": "black",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Array [
            Object {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          Object {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`[EditText] interactions Type: [column] - default should render \`maxLength\` counter with error style 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "black",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderColor": "black",
        },
        Object {
          "borderBottomColor": "black",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Array [
            Object {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          Object {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`[EditText] interactions Type: [row] should render \`!editable\` status 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "black",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderColor": "black",
        },
        Object {
          "borderBottomColor": "black",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Array [
            Object {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          Object {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`[EditText] interactions Type: [row] should render \`errorText\` 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "black",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderColor": "black",
        },
        Object {
          "borderBottomColor": "black",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Array [
            Object {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          Object {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`[EditText] interactions Type: [row] should render \`maxLength\` counter 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "black",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderColor": "black",
        },
        Object {
          "borderBottomColor": "black",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Array [
            Object {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          Object {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`[EditText] interactions Type: [row] should render without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "black",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderColor": "black",
        },
        Object {
          "borderBottomColor": "black",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Array [
            Object {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          Object {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`[EditText] interactions web renders without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "black",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderColor": "black",
        },
        Object {
          "borderBottomColor": "black",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          Object {
            "outlineWidth": 0,
          },
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Array [
            Object {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          Object {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;
